required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (5.3-dev, SVN trunk):
------------------------------------

- Set the default symbol size to 1 instead of 0 (#2896)

- fix WMS LegendURL to print sld_version for 1.3.0 Capabilities (#473)

- add GetSchemaExtension to WMS to support GetStyles in Capabilities XML (#473)

- move xlink declaration to root of WMS 1.3.0 DescribeLayerResponse

- Fixed a scalebar rounding problem causing to draw zero scalebar width (#2890)

- SLD: if it conatins a Filer Encoding tag, try to always set the
  layer's FILTER element (#2889)

- Add support for rendering INLINE layers with layer attributes (items) (#2870)

- Fix mapserver crash when rendering a query map in HILITE mode
  and there are is no STYLE defined (#2803)

- Added projection support to [...ext] tags for template output.

- Removed the error generation when the OGR layer contains no fields (#2883)

- Added enhancements to mapogr.cpp for style annotations (#2879)

- Fixed memory leaks when using msUpdate*FromString methods. (#2857)

- Fixed the problem when removing the attribute binding in mapscript.

- SOS XML validity fixes (#2646)

- add WFS calls for schema resolution (#2646)

- add gml:id to om:Observation (#2646)

- fix some XML validity issues (#2646)

- Fixed endianness issues with wide character strings for ArcSDE (#2878).  
  Thanks Russell McOrmond

- Fixed WMS request with LAYERS parameter: may cause segmentation fault (#2871)

- fix when layer status = DEFAULT and passing list of layers (#2066)

- Fixed msAddLabel may cause access violation in certain conditions

- Changed base type of labelObj size, minsize and maxsize from int to double (#2766)
